All files Final

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <!-- Иконки и фавикон -->
-    <link rel="icon" href="/icon_cat.jpg" />
-    <link rel="apple-touch-icon" href="/icon_cat.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/icon_cat.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon_cat.jpg" />
 
     <!-- Мета-теги для SEO и мобильных устройств -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +20,7 @@
       property="og:description"
       content="Персональное приложение-таймер для учебы с музыкой и котиками"
     />
-    <meta property="og:image" content="/icon_cat.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/icon_cat.jpg" />
     <meta property="og:type" content="website" />
 
     <!-- Манифест для PWA -->
@@ -37,7 +37,7 @@
     <!-- Предзагрузка критичных ресурсов (опционально) -->
     <link
       rel="preload"
-      href="/sounds/music_1.mp3"
+      href="%PUBLIC_URL%/sounds/music_1.mp3"
       as="audio"
       type="audio/mpeg"
     />
